Fixing overflow issues with zoom level.
[Imported from SVN. Original commit timestamp: 2019-12-28 10:24:41 -0600 (Sat, 28 Dec 2019)]

--- a/simple-data-table.css
+++ b/simple-data-table.css
@@ -10,8 +10,7 @@
 .data-table-column-options {
 	background-color: white;
 	border: 1px solid black;
-	width: 260px;
-	height: 527px;
+	width: 20em;
 	padding: .5em;
 	box-sizing: border-box;
 }
@@ -30,6 +29,7 @@
 	height: 12em;
 	overflow-y: scroll;
 	padding: 0;
+	margin: 0;
 }
 
 .data-table-column-options .filter-by-cell-values li {
